--- a/ios/patient_cc/Info.plist
+++ b/ios/patient_cc/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,23 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Manrope_Bold.ttf</string>
+		<string>Manrope_ExtraBold.ttf</string>
+		<string>Manrope_ExtraLight.ttf</string>
+		<string>Manrope_Light.ttf</string>
+		<string>Manrope_Medium.ttf</string>
+		<string>Manrope_Regular.ttf</string>
+		<string>Manrope_SemiBold.ttf</string>
+		<string>Poppins_Bold.ttf</string>
+		<string>Poppins_ExtraBold.ttf</string>
+		<string>Poppins_ExtraLight.ttf</string>
+		<string>Poppins_Light.ttf</string>
+		<string>Poppins_Medium.ttf</string>
+		<string>Poppins_Regular.ttf</string>
+		<string>Poppins_SemiBold.ttf</string>
+		<string>Poppins_Thin.ttf</string>
+	</array>
 </dict>
 </plist>
