--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
+		"@gorhom/bottom-sheet": "^4.4.5",
+		"@gorhom/portal": "^1.0.14",
 		"@react-navigation/bottom-tabs": "^6.5.7",
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
+		"react-native-document-picker": "^8.2.0",
+		"react-native-gesture-handler": "^2.9.0",
+		"react-native-reanimated": "^3.0.2",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-screens": "^3.20.0",
 		"react-native-splash-screen": "^3.3.0",
