--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@gorhom/bottom-sheet": "^4.4.5",
 		"@gorhom/portal": "^1.0.14",
+		"@react-native-community/blur": "^4.3.0",
 		"@react-native-community/checkbox": "^0.5.15",
 		"@react-navigation/bottom-tabs": "^6.5.7",
 		"@react-navigation/native": "^6.1.6",
