--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@react-navigation/bottom-tabs": "^6.5.7",
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
+		"@types/react-native-snap-carousel": "^3.8.5",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-document-picker": "^8.2.0",
@@ -27,6 +28,7 @@
 		"react-native-reanimated": "^3.0.2",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-screens": "^3.20.0",
+		"react-native-snap-carousel": "^3.9.1",
 		"react-native-splash-screen": "^3.3.0",
 		"react-native-svg": "^13.8.0",
 		"react-native-svg-transformer": "^1.0.0",
