--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	"dependencies": {
 		"@gorhom/bottom-sheet": "^4.4.5",
 		"@gorhom/portal": "^1.0.14",
+		"@react-native-clipboard/clipboard": "^1.11.2",
 		"@react-native-community/blur": "^4.3.0",
 		"@react-native-community/checkbox": "^0.5.15",
 		"@react-navigation/bottom-tabs": "^6.5.7",
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
+		"@types/react-native-snap-carousel": "^3.8.5",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-document-picker": "^8.2.0",
@@ -27,6 +29,8 @@
 		"react-native-reanimated": "^3.0.2",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-screens": "^3.20.0",
+		"react-native-share": "^8.2.2",
+		"react-native-snap-carousel": "^3.9.1",
 		"react-native-splash-screen": "^3.3.0",
 		"react-native-svg": "^13.8.0",
 		"react-native-svg-transformer": "^1.0.0",
