--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
 		"@types/react-native-snap-carousel": "^3.8.5",
+		"axios": "^1.4.0",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-document-picker": "^8.2.0",
@@ -44,6 +45,7 @@
 		"@tsconfig/react-native": "^2.0.2",
 		"@types/jest": "^29.2.1",
 		"@types/react": "^18.0.24",
+		"@types/react-native-dotenv": "^0.2.0",
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.2.1",
 		"babel-plugin-module-resolver": "^5.0.0",
@@ -52,6 +54,7 @@
 		"jest": "^29.2.1",
 		"metro-react-native-babel-preset": "0.73.8",
 		"prettier": "^2.4.1",
+		"react-native-dotenv": "^3.4.8",
 		"react-test-renderer": "18.2.0",
 		"typescript": "4.8.4"
 	},
